Fix bug for z-index

--- a/frontend/src/css/student/map.css
+++ b/frontend/src/css/student/map.css
@@ -3,7 +3,6 @@
 
 .student-home-map-date-wrapper {
   margin: 0 auto;
-  z-index: 1;
   position: relative;
   width: 140px;
   height: 75px;
